--- a/src/App/AppBody/PhoneDialog/Row/Row.scss
+++ b/src/App/AppBody/PhoneDialog/Row/Row.scss
@@ -5,13 +5,15 @@
 
     .name{
         padding: .1em 1em;
-        flex: 1;
         display: flex;
+        flex: 1 1 50%;
         align-items: flex-start;
     }
     .divider{
+
         background-color: #DDD;
         width: 1px;
+        flex: 1 1 1px;
     }
 }
 .row:nth-child(even){
